# VSP4L

./: .gitmodules  README.md  setup.sh
src/: CMakeLists.txt  app_const.h  const.cpp  const.h  effect_fsh.h  egl_window.cpp  egl_window.h  eye_app.cpp  eye_app.h  glfw_window.cpp  glfw_window.h  internal.h  iwindow.cpp  iwindow.h  key_dispatcher.cpp  key_dispatcher.h  key_dispatcher.h.old  key_event.h  key_state.h  localdefines.h  main.cpp  osd.cpp  osd.h  settings.cpp  settings.h  utilbase.h  window.cpp  window.h
src/aandusb/: CMakeLists.txt
src/aandusb/core/: CMakeLists.txt  core.cpp  core.h  core_linux.h  frame_base.cpp  frame_base.h  frame_interface.h  frame_pool.h  frame_queue.h  image_buffer.cpp  image_buffer.h  video.h  video_checker.cpp  video_checker.h  video_converter.cpp  video_converter.h  video_frame_base.cpp  video_frame_base.h  video_frame_interface.h  video_frame_queue.h  video_frame_utils.cpp  video_frame_utils.h  video_frame_wrapped.cpp  video_frame_wrapped.h  video_gl_renderer.cpp  video_gl_renderer.h  video_image.cpp  video_image.h
src/aandusb/gl/: abgr_fsh.h  argb_fsh.h  bgr_fsh.h  bgra_fsh.h  gray8_fsh.h  rgb565_fsh.h  rgb_fsh.h  rgba_fsh.h  texture_vsh.h  uyvy_fsh.h  yuv2_fsh.h  yuv420p_fsh.h  yuv420p_yv12_fsh.h  yuv420sp_nv12_ext_yuv_target.h  yuv420sp_nv12_fsh.h  yuv420sp_nv21_ext_yuv_target.h  yuv420sp_nv21_fsh.h  yuv422p_fsh.h  yuv422sp_fsh.h  yuv444p_fsh.h
src/aandusb/pipeline/: CMakeLists.txt  pipeline_base.cpp  pipeline_base.h  pipeline_gl_renderer.cpp  pipeline_gl_renderer.h  pipeline_v4l2_source.cpp  pipeline_v4l2_source.h
src/aandusb/usb/: aandusb.h  descriptor_defs.h
src/aandusb/uvc/: aanduvc.h
src/aandusb/v4l2/: CMakeLists.txt  pipeline_v4l2_source.cpp  pipeline_v4l2_source.h  v4l2.cpp  v4l2.h  v4l2_ctrl.cpp  v4l2_ctrl.h  v4l2_source.cpp  v4l2_source.h
src/common/: CMakeLists.txt  atomics.h  binutils.cpp  binutils.h  charutils.cpp  charutils.h  condition.h  egl_image_wrapper.cpp  egl_image_wrapper.h  eglbase.cpp  eglbase.h  endian_unaligned.h  gloffscreen.cpp  gloffscreen.h  glrenderer.cpp  glrenderer.h  gltexture.cpp  gltexture.h  glutils.cpp  glutils.h  handler.cpp  handler.h  image_helper.cpp  image_helper.h  json_helper.cpp  json_helper.h  matrix.cpp  matrix.h  mutex.h  quaternion.h  times.cpp  times.h  vec.h
src/wayland/: wayland_display.cpp  wayland_display.h  wayland_window.cpp  wayland_window.h
